# np_tensorrt

./: LICENSE
TensorRT-4.0.1.6/tensorrt_demo/: CMakeLists.txt
TensorRT-4.0.1.6/tensorrt_demo/include/: data_collector_interface.h  engine_inferface.h  inference_sys.h  inference_sys_builder.h  inference_sys_director.h  np_inference_sys_builder.h  np_inference_sys_director.h  openCV_parser.h  parameter.h  parser_inferface.h  tcp_channel.h  tensorRT_engine.h
TensorRT-4.0.1.6/tensorrt_demo/include/util/: blockingQueue.h  mylogs.h  thread_pool.hpp
TensorRT-4.0.1.6/tensorrt_demo/main/: client.cpp
TensorRT-4.0.1.6/tensorrt_demo/model/: ResNet_50_deploy.prototxt  VGG16_Deploy.prototxt
TensorRT-4.0.1.6/tensorrt_demo/src/: CMakeLists.txt  np_inference_sys_builder.cpp  np_inference_sys_director.cpp  openCV_parser.cpp  parameter.cpp  tcp_channel.cpp  tensorRT_engine.cpp
TensorRT-4.0.1.6/tensorrt_demo/tcp-client/: client.c
